--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -48,8 +48,7 @@
     </style>
 </head>
 <body>
-    <h1>{{ session['username'] }}'s Gallery</h1>
-    <h2>Your Last 5 Generations</h2>
+    <h1 class="AbZ">{{ session['username'] }}'s Gallery</h1>
 
     <div class="gallery">
         {% if images %}
